--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "oclif",
   "rules": {
     "object-curly-spacing": 0,
-    "no-console": 0
+    "no-console": 0,
+    "no-negated-condition": 0
   }
 }
