--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "react-lib-scripts",
   "description": "React lib scripts",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "author": "Antony Budianto @antonybudianto",
   "bin": {
     "react-lib-scripts": "./bin/run"
   },
   "bugs": "https://github.com/antonybudianto/react-lib-scripts/issues",
+  "peerDependencies": {
+    "react": "^16",
+    "react-dom": "^16"
+  },
   "dependencies": {
     "@oclif/command": "^1",
     "@oclif/config": "^1",
@@ -17,8 +21,6 @@
     "babel-preset-react-app": "^3.1.1",
     "css-loader": "^0.28.11",
     "iso-morphic-style-loader": "^2.0.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-node-externals": "^1.7.2"
@@ -28,7 +30,9 @@
     "eslint": "^4",
     "eslint-config-oclif": "^1",
     "globby": "^8",
-    "prettier": "1.13.5"
+    "prettier": "1.13.5",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   },
   "engines": {
     "node": ">=8.0.0"
