--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-lib-scripts",
   "description": "React lib scripts",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "author": "Antony Budianto @antonybudianto",
   "bin": {
     "react-lib-scripts": "./bin/run"
@@ -15,12 +15,14 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
+    "autoprefixer": "^8.6.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react-app": "^3.1.1",
     "css-loader": "^0.28.11",
     "iso-morphic-style-loader": "^2.0.1",
+    "postcss-loader": "^2.1.5",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-node-externals": "^1.7.2"
