--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^0.28.11",
     "iso-morphic-style-loader": "^2.0.1",
     "postcss-loader": "^2.1.5",
+    "url-loader": "^1.0.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-node-externals": "^1.7.2"
